# wazuh-installation-assistant

./: .gitignore  .test-5538  CHANGELOG.md  README.md  SECURITY.md  VERSION.json  builder.sh  pyproject.toml  tareas.md  vagrant@192.168.57.187  validate_wazuh_manager_changes.sh
.github/actions/offline-installation/: common.sh  offline-installation.sh
.github/actions/passwords-tool/: tests-stack-failure.sh  tests-stack-success.sh
.github/workflows/: 4.x_Test_installation_assistant.yml  4.x_Test_installation_assistant_distributed.yml  4.x_offline-installation.yml  4.x_passwords-tool.yml  4_builder_installation_assistant.yml  4_bumper_repository.yml  4_offline_installation.yml  4_password_tool.yml  4_test_installation_assistant.yml  4_test_installation_assistant_distributed.yml  5_builder_installation_assistant.yml  5_bumper_repository.yml  5_check_integration_tools.yaml  5_check_unit_tests.yaml  README.md  Test_installation_assistant.yml  Test_installation_assistant_distributed.yml  Test_installation_assistant_tier.yml  builder_installation_assistant.yml  check_integration_tools.yaml  check_unit_tests.yaml  example_output_testintegration.md  offline-installation.yml  password-tool.yml  passwords-tool.yml
.github/workflows/ansible-playbooks/: aio.yml  aio_tests.yml  distributed_copy_certificates.yml  distributed_generate_certificates.yml  distributed_install_dashboard.yml  distributed_install_indexer.yml  distributed_install_wazuh.yml  distributed_start_indexer_cluster.yml  distributed_tests.yml  offline_installation.yml  provision.yml
.github/workflows/templates/: config.j2
cert_tool/: certFunctions.sh  certMain.sh
common_functions/: common.sh
config/certificate/: config.yml
config/dashboard/: dashboard.yml  dashboard_all_in_one.yml  dashboard_assistant.yml  dashboard_assistant_distributed.yml
config/filebeat/: filebeat_assistant.yml
config/indexer/: indexer.yml  indexer_all_in_one.yml  indexer_assistant_distributed.yml
docs/: INSTALLATION.md  README.md  SUMMARY.md  book.toml
docs/book/: 404.html  index.html  print.html  searcher-09f2665d.js  searchindex-e2cf2c6b.js  toc-d1b8e5a3.js  toc.html
docs/book/dev/: setup.html
docs/book/guide/: backup-and-restore.html  security.html
docs/dev/: setup.md
docs/dev/generate-artifact/: generate-artifacts-manually.md  generate-artifacts-workflow.md  generate-artifacts.md
docs/dev/run-tests/: run-tests.md
docs/guide/: backup-and-restore.md  security.md
docs/guide/installation-assistant-deployments/: all-in-one.md  clusterized.md  installation-assistant-deployments.md
docs/guide/installation-assistant-upgrades/: all-in-one.md  clusterized.md  installation-assistant-upgrades.md
docs/guide/offline-download-packages/: offline-download-packages.md
docs/guide/offline-installation-assistant-deployments/: offline-assisted-install.md
docs/guide/offline-step-by-step-deployments/: offline-step-by-step.md
docs/guide/step-by-step-deployments/: all-in-one.md  clusterized.md  step-by-step-deployments.md
docs/guide/step-by-step-upgrades/: all-in-one.md  clusterized.md  (+1 more)
docs/guide/step-by-step-upgrades /: all-in-one.md
docs/ref/: backup-and-restore.md  glossary.md  security.md
documentation-templates/wazuh/: config.yml
install_functions/: checks.sh  dashboard.sh  filebeat.sh  indexer.sh  installCommon.sh  installMain.sh  installVariables.sh  manager.sh  wazuh-offline-download.sh  wazuh-offline-installation.sh
installation_assistant/checks/: __init__.py  global_checks.py  packages_installation_checks.py
installation_assistant/cli/: __main__.py  install.py
installation_assistant/managers/: __init__.py  config_manager.py  packages_manager.py
installation_assistant/utils/: __init__.py  enums.py
old_tests/install/: test_installation_assistant.py
passwords_tool/: passwordsFunctions.sh  passwordsMain.sh
tests/install/: test_installation_assistant.py
tests/test_utils/: test_logger.py
tests/unit/: README.md  conftest.py  test_cert_functions.py  test_checks.py  test_common.py  test_dashboard.py  test_indexer.py  test_install_common.py  test_manager.py  test_passwords_functions.py  unit-tests.sh
tools/: generate_offline_files.sh  repository_bumper.sh
utils/: __init__.py  enums.py  logger.py
(+95 files in other folders)
